# nncase

./: Directory.Packages.props  conanfile.py  pyproject.toml  requirements.test.txt  setup.py
.github/workflows/: compiler-build.yml  runtime-build.yml
cmake/: compile_flags.cmake  run_test.cmake
modules/Nncase.Modules.NTT/: packages.lock.json
modules/Nncase.Modules.NTT/Passes/: NTTAffineSelectionPass.cs  NTTTIRSelectionPass.cs
modules/Nncase.Modules.NTT/Targets/: CPUTarget.cs  NTTModuleCompiler.cs
ntt/: CMakeLists.txt
ntt/cmake/: compile_flags.cmake  ntt_module.cmake
ntt/include/nncase/: bfloat16.h  float8.h  half.h  math.h
ntt/src/: cpu_runtime.cpp
ntt/test/: ntt_test.h  ortki_helper.h
ntt/test/benchmark_test/: CMakeLists.txt  benchmark_ntt.py  benchmark_ntt_bf16_unary.cpp  benchmark_ntt_f32_matmul.cpp  benchmark_ntt_f32_matmul_primitive_size.cpp  benchmark_ntt_fp16_binary.cpp  benchmark_ntt_fp16_clamp.cpp  benchmark_ntt_fp16_gather.cpp  benchmark_ntt_fp16_layernorm.cpp  benchmark_ntt_fp16_matmul.cpp  benchmark_ntt_fp16_pack.cpp  benchmark_ntt_fp16_reduce.cpp  benchmark_ntt_fp16_rmsnorm.cpp  benchmark_ntt_fp16_scatter_nd.cpp  benchmark_ntt_fp16_softmax.cpp  benchmark_ntt_fp16_unpack.cpp  benchmark_ntt_fp16_where.cpp
ntt/test/ctest/: CMakeLists.txt  floor_mod_uint16.cpp  generate_binary_tests.py  generate_cast_tests.py  generate_pack_tests.py  generate_unpack_tests.py  test_generator_base.py  test_ntt_binary_add.cpp  test_ntt_binary_int32_pow.cpp  test_ntt_cast.cpp  test_ntt_gather.cpp  test_ntt_layer_norm.cpp  test_ntt_matmul.cpp  test_ntt_playground.cpp  test_ntt_reshard.cpp  test_ntt_slice.cpp
ntt/test/ctest/test_generator/: generate_binary_tests.py  generate_cast_tests.py  generate_pack_tests.py  generate_unary_tests.py  generate_unpack_tests.py  test_generator_base.py
python/: _nncase.pyi
python/nncase/native/: ffi.cpp
python/nncaseruntime/native/: ffi.cpp
rvv_kernel_tools/: Makefile  README.md  convert_rvv_to_scalar.py  exp_macro.txt  exp_scalar_functions.h  exp_test_config.json  input_macro.txt  kernel_test_framework.cpp  rvv_conversion_config.json  sin_scalar_functions.h  validate_sin_scalar  validate_sin_scalar.cpp
src/Native/src/: test.cpp
src/Nncase.Cli/: packages.lock.json
src/Nncase.CodeGen/: packages.lock.json
src/Nncase.Compiler/: Compiler.cs  packages.lock.json
src/Nncase.Compiler/Interop/: CApi.cs
src/Nncase.Core/: DataTypes.cs  DistributedType.cs  HuggingFaceOptions.cs  TensorOfT.cs  TensorUtilities.cs  packages.lock.json
src/Nncase.Core/CostModel/: Cost.cs
src/Nncase.Core/Evaluator/: IEvaluateContext.cs  TypeInference.cs
src/Nncase.Core/IR/: ExprCloner.g.cs  ExprFunctor.g.cs  ExprRewriter.g.cs  ExprVisitor.g.cs  IRList.csv
src/Nncase.Core/Schedule/: ScheduleTypes.cs
src/Nncase.Core/TIR/: PhysicalBuffer.cs
src/Nncase.Core/Utilities/: DistributedUtility.cs  ISLUtility.cs
src/Nncase.EGraph/: packages.lock.json
src/Nncase.Evaluator/: packages.lock.json
src/Nncase.Evaluator/NN/: Pad.cs  (+5 more)
src/Nncase.Graph/: packages.lock.json
src/Nncase.Importer/: packages.lock.json
src/Nncase.Passes/: RulesUtility.cs  packages.lock.json
src/Nncase.Quantization/: packages.lock.json
src/Nncase.Schedule/: packages.lock.json
src/Nncase.Simulator/: packages.lock.json
src/Nncase.Studio/: packages.lock.json
src/Nncase.Targets/: packages.lock.json
src/Nncase.Tests/: packages.lock.json
src/Nncase.Tests.TestFixture/: packages.lock.json
tests/: config.toml  huggingface_test_runner.py
tests/other/: test_llm_ffi.py
tests/python_api/: test_tensor_convert.py
(+199 files in other folders)
